# farman

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HEADERS.md  KEYBINDING_INTEGRATION.md  LICENSE  README.md  SPEC.md
.github/workflows/: build.yml  release.yml
docs/design/: archive-browsing.md  directory-comparison.md
images/: icon.icns  icon.psd
linux/: farman.desktop
resources/: farman.qrc
resources/presets/keybindings/: default.json  total-commander.json
resources/presets/themes/: dark-default.json  light-default.json  monokai.json  solarized.json
src/: main.cpp  test_worker.cpp  types.h
src/core/: AppPresets.cpp  AppPresets.h  ArchiveContext.cpp  ArchiveContext.h  ArchiveEntry.h  BookmarkManager.cpp  BookmarkManager.h  DirectoryCompare.h  DirectoryHistory.cpp  DirectoryHistory.h  FileItem.cpp  FileItem.h  Logger.cpp  Logger.h  PlaceholderExpander.cpp  PlaceholderExpander.h  UserCommand.cpp  UserCommand.h  UserCommandManager.cpp  UserCommandManager.h  UserCommandRunner.cpp  UserCommandRunner.h
src/core/workers/: ArchiveCreateWorker.cpp  ArchiveCreateWorker.h  ArchiveExtractEntriesWorker.cpp  ArchiveExtractEntriesWorker.h  ArchiveExtractWorker.cpp  ArchiveExtractWorker.h  CopyWorker.cpp  CopyWorker.h  DirectoryCompareWorker.cpp  DirectoryCompareWorker.h  MoveWorker.cpp  MoveWorker.h  PropertiesWorker.cpp  PropertiesWorker.h  RemoveWorker.cpp  RemoveWorker.h  SearchWorker.cpp  SearchWorker.h  WorkerBase.cpp  WorkerBase.h
src/keybinding/: CommandLayout.cpp  CommandLayout.h  CommandRegistry.cpp  CommandRegistry.h  ICommand.cpp  ICommand.h  KeyBindingManager.cpp  KeyBindingManager.h
src/keybinding/commands/: ApplicationCommands.cpp  ApplicationCommands.h  BaseCommand.cpp  BaseCommand.h  FileOperationCommands.cpp  FileOperationCommands.h  NavigationCommands.cpp  NavigationCommands.h  PaneCommands.cpp  PaneCommands.h  SelectionCommands.cpp  SelectionCommands.h
src/model/: FileListModel.cpp  FileListModel.h
src/settings/: ColorScheme.cpp  ColorScheme.h  PresetIO.cpp  PresetIO.h  Settings.cpp  Settings.h
src/ui/: AppearanceTab.cpp  AppearanceTab.h  AttributesDialog.cpp  AttributesDialog.h  BehaviorTab.cpp  BehaviorTab.h  BookmarkEditDialog.cpp  BookmarkEditDialog.h  BookmarkListDialog.cpp  BookmarkListDialog.h  BulkRenameDialog.cpp  BulkRenameDialog.h  ClickableLabel.cpp  ClickableLabel.h  CreateArchiveDialog.cpp  CreateArchiveDialog.h  DeleteConfirmDialog.cpp  DeleteConfirmDialog.h  DirectoryCompareDialog.cpp  DirectoryCompareDialog.h  ExternalAppsTab.cpp  ExternalAppsTab.h  ExtractArchiveDialog.cpp  ExtractArchiveDialog.h  FileListDelegate.cpp  FileListDelegate.h  FileListPane.cpp  FileListPane.h  FileListView.cpp  FileListView.h  FileManagerPanel.cpp  FileManagerPanel.h  GeneralTab.cpp  GeneralTab.h  HistoryDialog.cpp  HistoryDialog.h  KeybindingTab.cpp  KeybindingTab.h  LogPane.cpp  LogPane.h  (+22 more)
src/utils/: ArchivePath.cpp  ArchivePath.h  Dialogs.cpp  Dialogs.h  EnterClickFilter.cpp  EnterClickFilter.h  FarmanMessageBox.cpp  FarmanMessageBox.h
src/viewer/: BinaryView.cpp  BinaryView.h  BinaryViewerPlugin.cpp  BinaryViewerPlugin.h  BinaryViewerWindow.cpp  BinaryViewerWindow.h  IViewerPlugin.h  ImageView.cpp  ImageView.h  ImageViewerPlugin.cpp  ImageViewerPlugin.h  ImageViewerWindow.cpp  ImageViewerWindow.h  TextView.cpp  TextView.h  TextViewerPlugin.cpp  TextViewerPlugin.h  TextViewerWindow.cpp  TextViewerWindow.h  ViewerDispatcher.cpp  ViewerDispatcher.h
tools/: generate_icon_assets.sh
translations/: farman_ja.ts
windows/: farman.iss
